# tonic-rust-fullstack

./: .gitignore  Cargo.toml  package-lock.json  package.json  protogen.sh  rustfmt.toml
client/: .eslintignore  .eslintrc.js  .prettierrc.js  .stylelintrc  config-overrides.js  package.json  tsconfig.json
client/src/: App.module.scss  App.test.tsx  App.tsx  index.css
proto/: chat.proto  helloworld.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/services/chat_service/: mod.rs
src/: server.rs
