[package]
edition = "2018"
name    = "helloworld-tonic"
version = "0.1.0"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
